--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -1284,6 +1284,8 @@ p {
 
 /* --- Carrier Section --- */
 /* Section BG */
+.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}
+.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}
 .section-featured-carrier .wrapper {
   padding-top: 120px;
   padding-bottom: 0; }
