--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,600,700);
+/*@import url(http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700|Open+Sans:300,600,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,600,700);*/
 /* --- RESET ---*/
 *,
 *:before,
