added new templates; edited date format and placement in page list

--- a/concrete/blocks/page_list/view.css
+++ b/concrete/blocks/page_list/view.css
@@ -44,3 +44,7 @@ div.ccm-block-page-list-page-entry-text div.ccm-block-page-list-title {
 div.ccm-block-page-list-page-entry-read-more {
     margin-top: 20px;
 }
+div.ccm-block-page-list-date {
+    float: left;
+    margin-right: 3px;
+}
