added new blue bg image to press release; edited css

--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -2496,3 +2496,10 @@ p {
     height: 234px;
 }
 }
+/* Press releases individual page */
+.mid {
+    padding-top: 85px;
+}
+.press .main-title {
+    background: url("../images/blue-gradient-bg.jpg") no-repeat 0 0;
+}
