--- a/concrete/blocks/page_list/view.css
+++ b/concrete/blocks/page_list/view.css
@@ -47,4 +47,5 @@ div.ccm-block-page-list-page-entry-read-more {
 div.ccm-block-page-list-date {
     float: left;
     margin-right: 3px;
+    font-weight: 600;
 }
