--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -138,7 +138,7 @@ h2, .h2 {
   margin-bottom: 20px; }
 
 h3, .h3 {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Titillium Web",sans-serif;
   font-weight: 300;
   margin-top: 0;
   font-size: 16px;
@@ -226,13 +226,13 @@ p {
 
 .navbar-default .navbar-nav li a {
   color: #838994;
-  padding: 15px 20px;
+  padding: 7px 20px;
   -webkit-transition: color 400ms ease-in-out;
   -moz-transition: color 400ms ease-in-out;
   transition: color 400ms ease-in-out; }
   @media only screen and (max-width: 992px) {
     .navbar-default .navbar-nav li a {
-      padding: 15px 10px;
+      padding: 7px 10px;
       font-size: 12px;
       font-size: 1.2rem; } }
   @media only screen and (max-width: 768px) {
@@ -245,12 +245,13 @@ p {
     color: #343434; }
 
 .navbar-default .navbar-nav .active a {
-  background-color: transparent;
-  color: #1b87da;
-  cursor: default; }
+  background-color: #1c3587;
+  color: #ffffff;
+  cursor: default;
+  border-radius: 4px;}
   .navbar-default .navbar-nav .active a:hover, .navbar-default .navbar-nav .active a:focus {
-    background-color: transparent;
-    color: #1b87da; }
+    background-color: #1c3587;
+    color: #ffffff; }
 
 @media only screen and (max-width: 767px) {
   .navbar-collapse {
@@ -260,10 +261,14 @@ p {
   border-width: 0; }
 
 .navbar-right {
-  margin-top: 20px !important; }
+  margin-top: 32px !important; }
   @media only screen and (max-width: 768px) {
     .navbar-right {
-      margin-top: 0 !important; } }
+      margin-top: 0 !important; }
+    .navbar-default .navbar-nav .active a {
+        border-radius: 0;
+    }
+  }
 
 .navbar-toggle {
   border: none; }
@@ -2546,9 +2551,13 @@ p {
 .press h2, .press h3 {
     text-align: left;
 }
+.press h2 {
+    margin-top: 0;
+}
 .press h3 {
     font-size: 30px;
     line-height: 36px;
+    font-weight: 500;
 }
 .press-feature {
     font-size: 16px;
