--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -403,7 +403,7 @@ p {
   font-size: 1.6rem;
   color: white;
   border-radius: 3px;
-  padding: 10px 25px;
+  padding: 10px 55px;
   text-transform: uppercase;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
   -webkit-transition: all 0.4s ease-in-out 0s;
@@ -421,7 +421,6 @@ p {
 /* --- Adverise Section --- */
 /* Section BG */
 .section-featured .wrapper {
-  padding-top: 120px;
   padding-bottom: 0;
   background: url("../images/bg_featured.png") no-repeat center -50px; }
   @media only screen and (max-width: 768px) {
@@ -1222,7 +1221,6 @@ p {
 .fluid-width-video-wrapper{width:100%;position:relative;padding:0;}
 .fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}
 .section-featured-carrier .wrapper {
-  padding-top: 120px;
   padding-bottom: 0; }
 
 /* Featured */
@@ -2189,6 +2187,9 @@ p {
     display: block;
     margin: 0 auto;
 }
+.release .container {
+    padding: 0 !important;
+}
 .main-title {
     text-align: left;
 }
@@ -2218,11 +2219,42 @@ p {
     padding: 12px 0;
 }
 /* About Page */
-.top-section {
+.top-section, .section-featured-carrier, .section-featured {
     margin-top: 97px;
 }
 .about-form {
     background: linear-gradient(45deg, #1d2879 0%, #1b87da 100%) repeat;
+}
+.about-form h2 {
+    text-align: left;
+    color: #ffffff;
+}
+.meet-visionaries .col-md-4 {
+    padding: 0 20px;
+}
+.meet-visionaries img {
+    width: 100%;
+}
+.meet-visionaries img, .meet-visionaries .people {
+    margin: 0 auto;  
+}
+.meet-visionaries .name {
+    font-size: 1.9em;
+}
+.meet-visionaries .title {
+    font-size: 1.4em;
+    margin-top: -4px;
+}
+.meet-visionaries .row {
+    margin: 0 0 38px;
+}
+.wrapper.meet-visionaries {padding-bottom: 0;}
+.wrapper.investors-board-advisors {padding-top: 0;}
+.investors-board-advisors p {
+    text-transform: uppercase;
+    color: #1b87da;
+    font-weight: 600;
+    text-align: center;
 }
 /* text and image template */
 .backstretch-contain {
@@ -2346,6 +2378,13 @@ p {
       margin-top: 20px;
       height: 300px; 
     } 
+    .meet-visionaries .name {
+        font-size: 1.7em;
+    }
+    .meet-visionaries .title {
+        font-size: 1.2em;
+        line-height: 1.3em;
+    }
 }
 @media all and (max-width: 991px) {
     .release .clearfix {
@@ -2388,6 +2427,12 @@ p {
     } 
     .top-section {margin-top: 51px;}
     .about-us .container {padding: 40px 0;}
+    .about-form .container {padding: 0 10%;}
+    .meet-visionaries img, .meet-visionaries .people {width: 70%;}
+    .meet-visionaries .col-sm-4 {
+        margin-bottom: 20px;
+    }
+    .meet-visionaries .row {margin: 0;}
 }
 @media only screen and (max-width: 767px) {
     .androids {
