--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -204,7 +204,7 @@ p {
 
 @media only screen and (max-width: 767px) {
   .navbar-brand:hover, .navbar-brand:focus {
-    margin-left: -15px !important; } }
+    margin-left: 0 !important; } }
 .navbar {
   font-size: 14px;
   font-size: 1.4rem;
@@ -2440,11 +2440,15 @@ p {
     .about-form .container {padding: 0 10%;}
     .address {
         margin-bottom: 15px;
+        text-align: center;
     }
     .address h4 {
         margin-top: -2px;
-        width: 140px;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 2px;
     }
+    .address div {margin-left: 0;}
     .meet-visionaries img, .meet-visionaries .people {width: 70%;}
     .meet-visionaries .col-sm-4 {
         margin-bottom: 20px;
