--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -107,6 +107,10 @@ a {
     margin-top: 40px;
 }
 
+.btn-center-2 a {
+    margin-bottom: 8px;
+}
+
 /* --- Typography --- */
 /**
  * Titles
@@ -131,18 +135,6 @@ h1, .h1 {
   font-size: 5rem;
   margin-bottom: 20px;
   font-weight: 300; }
-  @media only screen and (max-width: 768px) {
-    h1, .h1 {
-      line-height: 43px;
-      line-height: 4.3rem;
-      font-size: 40px;
-      font-size: 4rem; } }
-  @media only screen and (max-width: 767px) {
-    h1, .h1 {
-      line-height: 35px;
-      line-height: 3.5rem;
-      font-size: 30px;
-      font-size: 3rem; } }
 
 h2, .h2 {
   font-weight: 400;
@@ -160,17 +152,36 @@ h3, .h3 {
   font-size: 1.6rem;
   line-height: 18px;
   line-height: 1.8rem; }
+
+/*
+  @media only screen and (max-width: 768px) {
+    h1, .h1 {
+      line-height: 43px;
+      line-height: 4.3rem;
+      font-size: 40px;
+      font-size: 4rem; } }
+*/
   @media only screen and (max-width: 767px) {
+    h1, .h1 {
+      line-height: 1.1em;
+      font-size: 30px;
+      font-size: 3rem;
+      margin-bottom: 2px; }
+    h2, .h2 {
+        font-size: 2.3rem;
+        line-height: 1em;
+        font-weight: 300;
+    }
     h3, .h3 {
       font-size: 14px;
       font-size: 1.4rem;
       line-height: 16px;
-      line-height: 1.6rem; } }
-
-@media only screen and (max-width: 767px) {
-  h4, .h4 {
+      line-height: 1.6rem; }
+    h4, .h4 {
     text-align: left;
-    margin-bottom: 20px; } }
+    margin-bottom: 20px;
+    font-size: 1.4em;}
+  }
 
 .h2-carrier {
   font-size: 40px;
@@ -418,7 +429,8 @@ p {
   font-size: 1.6rem;
   color: white;
   border-radius: 3px;
-  padding: 10px 55px;
+  padding: 10px 0px;
+  width: 220px;
   text-transform: uppercase;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
   -webkit-transition: all 0.4s ease-in-out 0s;
@@ -455,12 +467,16 @@ p {
 }
 .home h4 {
     font-weight:300;
+    line-height: 1.2em;
 }
 .home-product h1 {
     color: #343434 !important;
 }
 .home-product a {
     float: none !important;
+}
+.section-home-readmore > wrapper {
+    padding: 100px 0;
 }
 .quote {
     padding-left: 35px;
@@ -469,11 +485,28 @@ p {
     font-size: 2.5em;
     line-height: 1.2em;
 }
-.quote h3, .quote span, .quote a {
+.quote h3, .quote span {
     text-align: left;
 }
 .quote a {
     margin-top: 30px;
+}
+.video-container {
+    position: relative;
+    padding-bottom:56.25%;
+    padding-top:30px;
+    height: 0;
+    overflow: hidden;
+    margin-bottom: 15px;
+}
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
 }
 /* --- Advertise Section --- */
 /* Section BG */
@@ -2500,6 +2533,7 @@ p {
     .section-video h2 {margin-top: 50px; }
     .diagram-router {right: 270px; }
     .diagram-description--holes {left: 325px; }
+    .btn {width: 200px;}
     
   .popover-custom--hackers {
     left: 385px; }
@@ -2542,6 +2576,7 @@ p {
         font-size: 1.2em;
         line-height: 1.3em;
     }
+    .btn {width: 190px;font-size:1.4rem;}
 }
 @media all and (max-width: 991px) {
     .release .clearfix {
@@ -2607,6 +2642,7 @@ p {
         line-height: 1.2em;
     }
     .meet-visionaries .title {margin-top: 0;}
+    .backstretch-contain .container {padding: 30px 0;}
 }
 @media only screen and (max-width: 767px) {
     .androids {
@@ -2650,6 +2686,7 @@ p {
         font-size: 1.2rem;
         margin: 0; 
     }
+    .section-press {padding-top: 0;}
     .section-featured-carrier .wrapper {
       padding-top: 50px;
       text-align: center; 
@@ -2745,15 +2782,18 @@ p {
         padding: 10px 10px;
         margin-bottom: 30px; 
     } 
-    .section-press {
-        padding-top: 52px;
-    }
     .about-form .btn.btn-success {width: 100%;}
+    .btn {padding: 10px 30px;}
+    .quote a {margin: 30px auto 0;display:block;}
 }
 @media only screen and (max-width:520px) {
     .meet-visionaries .container > div {
         width: 100%;
     }
+}
+@media (max-width: 480px) {
+    .btn-sp-right {margin-right: 0;}
+    .btn-center-2 a {width: 80%;}
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
     .product .product-type {
