--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -515,6 +515,14 @@ p {
     width: 100%;
     height: 100%;
 }
+#home-feature-on {
+    width: 100%;
+    background: url('../images/featured-on.jpg') no-repeat;
+    background-size: cover;
+    height: 0;
+    padding-top: 7%;
+    max-width: 1200px;
+}
 /* --- Advertise Section --- */
 /* Section BG */
 .section-featured .wrapper {
@@ -2367,8 +2375,10 @@ p {
     padding: 100px 0;
 }
 .txt-right {
+    /*
     background: url('../images/blue-gradients-transparent-bg-rt.png') no-repeat;
     background-position: right top; 
+    */
 }
 .txt-left {
     background: url('../images/blue-gradients-transparent-bg-lt.png') no-repeat;
@@ -2417,6 +2427,9 @@ p {
     right: 0;
     background-size: 100%;
     background-repeat: repeat-y;
+}
+.careers-top .wrapper {
+    padding: 100px 30px;
 }
 .careers-top span {
     display: block;
@@ -2546,6 +2559,7 @@ p {
     left: 385px; }
   .popover-custom--connections {
     left: 465px; } 
+    .careers-top .wrapper {padding: 70px 30px;}
 }
 @media only screen and (max-width: 992px) {
     .counter .counter-subtitle {
@@ -2584,6 +2598,7 @@ p {
         line-height: 1.3em;
     }
     .btn {width: 190px;font-size:1.4rem;}
+    .careers-top .wrapper {padding: 0px 30px;}
 }
 @media all and (max-width: 991px) {
     .release .clearfix {
@@ -2796,6 +2811,7 @@ p {
         padding: 10px 10px;
         margin-bottom: 30px; 
     } 
+    .careers-top span {margin: -2px 0 10px;}
     .about-form .btn.btn-success {width: 100%;}
     .btn {padding: 10px 30px;}
     .quote a {margin: 30px auto 0;display:block;}
